# tree-sitter-systemrdl

./: .gitignore  Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter.json
.github/workflows/: linux.yml
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
queries/: folds.scm  highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
