[package]
name = "tree-sitter-systemrdl"
description = "systemrdl grammar for the tree-sitter parsing library"
version = "0.8.0"
keywords = ["incremental", "parsing", "tree-sitter", "systemrdl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/SystemRDL/tree-sitter-systemrdl"
edition = "2021"
license = "MIT"
readme = "README.md"

build = "bindings/rust/build.rs"
include = [
  "LICENSE",
  "bindings/rust/*",
  "grammar.js",
  "tree-sitter.json",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
